# AgenticScraping

./: .env-example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
webscraper/app/: main.py
webscraper/app/crews/: scrape_agents.py  scrape_flow.py
webscraper/app/jobs/: tasks.py
webscraper/app/models/: base.py
webscraper/app/static/: index.html
webscraper/app/utils/: scraper.py
worker/: worker.py
